# yamldiff

./: Cargo.toml  README.md
examples/: example-strat.yaml  example-strat2.yaml  vault-filter-doc.yaml  vault-filter.yaml  vault-strat.yaml
src/: error.rs  keypath.rs  main.rs  strategy.rs  yamldiff.rs
test-fixtures/: vault-filter.yaml  vault-strat.yaml  vault1.yaml  vault2.yaml
test-fixtures/singledoc/: modified.yaml  original.yaml
test-fixtures/unordered-k8s/: modified.yaml  original.yaml
test-fixtures/unordered-renamed-k8s/: strat-filter.yaml  strat.yaml  vault1.yaml  vault2.yaml
