[package]
name = "yamldiff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust = "0.4"
clap = "3.0.0-beta.5"
error-chain = "0.12.4"
diffy = "0.2.1"
ansi-colors = "0.3.0"
linked-hash-map = "0.5"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
